# AutoAnalyst-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  evaluation_insights_plan.md  extract_prompt.py  pyproject.toml  requirements.txt  test_demo.py  test_e2e.py  test_pipeline.py
.github/: CODEOWNERS  pull_request_template.md
app/: streamlit_app.py
docs/: Architecture.md  BRANCHING_STRATEGY.md  BRANCH_PROTECTION_SETUP.md  CHANGELOG.md  CODE_REVIEW_CHECKLIST.md  COLLABORATOR_INVITATION_GUIDE.md  CONTENT.md  DASHBOARD.md  DEVELOP_TO_MAIN_MERGE_REPORT.md  Deployment-Guide.md  Developer-Handbook.md  GITHUB_WORKFLOW.md  GIT_WORKFLOW.md  Git-Workflow.md  Integration-Guide.md  PHASE1_PLAN.md  PHASE2_QUICKSTART.md  PHASE2_STEPS.md  PHASE2_TASKS_Team.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  PULL_REQUEST_GUIDE.md  Project-Handbook.md  README.md  SETUP_GUIDE.md  TEAM_COLLABORATION.md  TEAM_START_MESSAGE.md  TEAM_TASKS.md  TEAM_TASK_BOARD.md  UPDATE_REPORT.md  USAGE.md  agentic_architecture_langchain_langgraph.md  content_agent_report.md  end_to_end_integration_strategy.md  phase_plan.md  preprocessing_plan.md  project_overview.md  project_plan.md  repository_settings_guide.md  roadmap.md  (+9 more)
frontend/: .gitignore  README.md  README.wireframes.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
models/: analytics_model.pkl  content_model.pkl  cv_model.pkl  design_model.pkl  optimizer_model.pkl  research_model.pkl  strategy_metadata.json  (+1 more)
(+429 files in other folders)
