[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoanalyst-ai"
version = "0.1.0"
description = "Automated AI-powered data analyst system starter project."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AutoAnalyst AI Contributors" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
